# bible_notariale

./: README.md  final_quality_fixes.py  fix_remaining_warnings.py  index_bible_notariale.py
AFFINE/: Améliorations.md
AFFINE/analyse/: Analyse Graph.md  Documentation RAG & Graph RAG .md  Grammaire notariale.md  LE PROBLÈME DE LA DIMENSION TEMPORELLE.md  UI de Recherche & Knowledge Base.md
SOURCES CHATBOT/chatbot-CNCAC-main/: .env.test  .gitignore  ARCHITECTURE.md  ARCHITECTURE_SUMMARY.txt  CLAUDE.md  CODEBASE_ANALYSIS.md  DEPLOYMENT.md  DEVELOPMENT.md  Makefile  QUICK_REFERENCE.md  README.md  cleanup.sh  deploy.sh  docker-compose.dev.yml  docker-compose.yml  start-dev.sh  stop-dev.sh
SOURCES CHATBOT/chatbot-CNCAC-main/backend/: .dockerignore  .env.example  .env.test  Dockerfile  check_conversation_citations.py  coverage.json  coverage.xml  debug_graph_entities.py  ingestion_log.txt  mypy.ini  mypy_errors.txt  post-ingestion.sh  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  ruff.toml  run_full_evaluation.sh  setup.sh
SOURCES CHATBOT/chatbot-CNCAC-main/backend/evaluation/: questions_evaluation.csv
SOURCES CHATBOT/chatbot-CNCAC-main/backend/migrations/: create_evaluations_table.sql  create_tracking_table.sql  update_evaluations_populate_missing_v3.sql  update_evaluations_table_v2.sql
SOURCES CHATBOT/chatbot-CNCAC-main/backend/ontologies/: notaria_ontology.owl
SOURCES CHATBOT/chatbot-CNCAC-main/backend/scripts/: benchmark_quality_report.py  enrichment_pipeline.py  ingestion_pipeline.py  list_users.py  make_user_admin.py  setup_docling.sh  verify_minio.py
SOURCES CHATBOT/chatbot-CNCAC-main/backend/src/: __init__.py  main.py
SOURCES CHATBOT/chatbot-CNCAC-main/backend/src/agents/: graph_enrichment_agent.py
SOURCES CHATBOT/chatbot-CNCAC-main/backend/src/api/: admin.py  auth.py  chat.py  conversations.py  documents.py  evaluations.py
SOURCES CHATBOT/chatbot-CNCAC-main/backend/src/core/: config.py  database.py  logger.py  service_manager.py
SOURCES CHATBOT/chatbot-CNCAC-main/backend/src/models/: schemas.py
SOURCES CHATBOT/chatbot-CNCAC-main/backend/src/routes/: embedding.py
SOURCES CHATBOT/chatbot-CNCAC-main/backend/src/services/: minio_service.py  neo4j_service.py  notaria_rag_service.py  ontology_service.py
SOURCES CHATBOT/chatbot-CNCAC-main/backend/tests/: conftest.py
_INSTRUCTIONS/: PLAN_ACTION_INDEX.md
_metadata/: index_complet.json  validation_report.json
_metadata/documents/: 20250115_note_decret_2024_906_relatif_aux_inspections_des_officiers_publics_et_ministeriels_et_arret.metadata.json  20250709_ext_adsn_vade_mecum_signacte_1.metadata.json  assurances_contrat_cyber_renouvellement_au_01_07_2025.metadata.json  assurances_flipbook_contrats_de_la_profession.metadata.json  carrieres_des_notaires_et_modalites_declaratives.metadata.json  consultation_cridon.metadata.json  convention_collective_20221215_avenant_n48_du_15_decembre_2022.metadata.json  convention_collective_20230525_avenant_n50_a_la_ccn_periode_dessai_1.metadata.json  convention_collective_20231214_avenant_n54_a_la_ccn_modification_de_larticle_15_categorie_employes.metadata.json  convention_collective_20240321_avenant_n56_ccn_modification_art_12_2_procedure_licenciement_mis_en_f.metadata.json  convention_collective_20241114_avenant_58_modif_art_15_6_et_29_3_3_mis_en_forme.metadata.json  convention_collective_20241212_avenant_59_modif_art_29_5_participation_financiere_formation_pro_mis_.metadata.json  convention_collective_20250624_pdt_csn_msg_acquisition_conges_payes_arret_maladie_pj.metadata.json  convention_collective_avenant_n51.metadata.json  convention_collective_avenant_n52.metadata.json  convention_collective_avenant_n53.metadata.json  convention_collective_avenant_n_47_modification_de_l_article_29_1_2_sur_la_formation.metadata.json  convention_collective_convention_collective_nationale_du_notariat_idcc_2205_actualisee_et_consolidee.metadata.json  cp_guide_spe_v_def_2020_07_08.metadata.json  csn2019_20181220_avenant_n_36_opco.metadata.json  csn2019_accord_egalite_professionnelle_entre_les_femmes_et_les_hommes_20190418.metadata.json  csn2019_accord_f_h.metadata.json  csn2019_accord_formation_et_reconversion_ou_promotion_par_l_alternance_20190711.metadata.json  csn2019_acte_electro_ssp.metadata.json  csn2019_analyse_nationale_des_risques_lcb_ft_en_france_septembre_2019.metadata.json  csn2019_avenant_n_38_opco.metadata.json  csn2020_accord_interessement_11072019.metadata.json  csn2020_avenant_40_accord_de_salaires_20200917.metadata.json  csn2020_circulaire_05_20_tm.metadata.json  csn2020_circulaire_n_2020_1_du_15_avril_2020.metadata.json  csn2020_circulaire_n_2020_2_du_7_mai_2020.metadata.json  csn2020_circulaire_n_2020_3_du_22_septembre_2020.metadata.json  csn2021_202106_avenant_42_notaire_salarie.metadata.json  csn2021_accord_de_branche_du_15_mai_2020_relatif_au_delai_de_carrence_entre_deux_contrats_a_duree_de.metadata.json  csn2021_avenant_accord_de_salaires_20210218.metadata.json  csn2021_circulaire_02_21_av_be.metadata.json  csn2021_circulaire_2021_1_du_19_fevrier_2021.metadata.json  csn2021_processus_ciclade_septembre_2021.metadata.json  csn2022_2022_01_circulaire_csn_les_annexes_des_actes_notaries_au_regard_des_contraintes_rgpd_et_cnil.metadata.json  csn2022_2022_02_circulaire_csn_les_frais_de_recherche_et_de_copie_d_acte_et_de_leurs_annexes.metadata.json  (+205 more)
docs/: METADATA.md
docs/categories/: accord_branche.md  assurance.md  avenant_ccn.md  circulaire_csn.md  conformite.md  decret_ordonnance.md  fil_info.md  immobilier.md  (+1 more)
scripts/: add_confiance_attendue.py
(+57 files in other folders)
